# better-together-game

client/: .eslintrc.cjs  .gitignore  build.sh  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: game_canvas.tsx
client/src/components/game_components/: axes_helper.tsx  floor.tsx  index.ts  pawn.tsx  use_controls.tsx
client/src/grpc-client/: updates.client.ts  updates.ts
server/: .gitignore  Cargo.toml  build.rs
server/proto/: updates.proto
server/src/: main.rs  service.rs  simulation.rs  ws.rs
server/src/service/: simulation_service.rs
server/src/simulation/: instruction.rs  level.rs
server/src/simulation/level/: level_one.rs
