[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
prost = "0.13.1"
rapier3d = { version = "0.22", features = ["simd-stable"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tonic = { version = "0.12.1", features = ["transport"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = "0.12.1"
fs_extra = "1.3.0"
